# AnalogStepik

./: .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml  test_e2e.py
backend/alembic/: env.py
backend/alembic/versions/: 45c65daeaf87_initial_migration.py  5c6d4756cc47_add_output.py  7f8f14371773_merge_tests_and_courses_branches.py  841e619c97ad_add_tasks_table.py  b9b2f972d9d3_add_test_cases.py  ccc797910a10_add_courses_and_enrollments.py  dd61889e96d4_add_is_teacher_to_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  courses.py  submissions.py  tasks.py  users.py
backend/app/core/: celery_app.py  config.py  runner.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: course.py  submission.py  task.py  user.py
backend/app/worker/: __init__.py  tasks.py
